test_outputs/connlist/vm_example_explain_output.txt

##########################################
# Specific connections and their reasons #
##########################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => default/new-vm-1[Pod]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy 'default/default-deny' selects default/new-vm-1[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Ingress rule (no rules defined)
				- NetworkPolicy 'default/policy1' selects default/new-vm-1[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Ingress rule
				- NetworkPolicy 'default/policy14' selects default/new-vm-1[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Ingress rule
				- NetworkPolicy 'default/policy18' selects default/new-vm-1[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Ingress rule
				- NetworkPolicy 'default/policy3' selects default/new-vm-1[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Ingress rule
				- NetworkPolicy 'default/policy6' selects default/new-vm-1[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => default/new-vm-2[Pod]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy 'default/default-deny' selects default/new-vm-2[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Ingress rule (no rules defined)
				- NetworkPolicy 'default/policy14' selects default/new-vm-2[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Ingress rule
				- NetworkPolicy 'default/policy16' selects default/new-vm-2[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Ingress rule
				- NetworkPolicy 'default/policy18' selects default/new-vm-2[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Ingress rule
				- NetworkPolicy 'default/policy3' selects default/new-vm-2[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Ingress rule
				- NetworkPolicy 'default/policy6' selects default/new-vm-2[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => default/new-vm-3[Pod]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy 'default/default-deny' selects default/new-vm-3[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Ingress rule (no rules defined)
				- NetworkPolicy 'default/policy1' selects default/new-vm-3[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Ingress rule
				- NetworkPolicy 'default/policy14' selects default/new-vm-3[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Ingress rule
				- NetworkPolicy 'default/policy18' selects default/new-vm-3[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Ingress rule
				- NetworkPolicy 'default/policy3' selects default/new-vm-3[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Ingress rule
				- NetworkPolicy 'default/policy6' selects default/new-vm-3[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/new-vm-1[Pod] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy 'default/default-deny' selects default/new-vm-1[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Egress rule (no rules defined)
				- NetworkPolicy 'default/policy0' selects default/new-vm-1[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Egress rule
				- NetworkPolicy 'default/policy11' selects default/new-vm-1[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Egress rule
				- NetworkPolicy 'default/policy13' selects default/new-vm-1[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Egress rule
				- NetworkPolicy 'default/policy2' selects default/new-vm-1[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Egress rule
				- NetworkPolicy 'default/policy5' selects default/new-vm-1[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Egress rule

		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/new-vm-1[Pod] => default/new-vm-2[Pod]:

Allowed connections:
	Allowed TCP:[80] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy 'default/policy2' allows connections by Egress rule #1
		Ingress (Allowed)
			NetworkPolicy 'default/policy3' allows connections by Ingress rule #1

Denied connections:
	Denied TCP:[1-79,81-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy 'default/default-deny' selects default/new-vm-1[Pod], but default/new-vm-2[Pod] is not allowed by any Egress rule (no rules defined)
				- NetworkPolicy 'default/policy0' selects default/new-vm-1[Pod], but default/new-vm-2[Pod] is not allowed by any Egress rule
				- NetworkPolicy 'default/policy11' selects default/new-vm-1[Pod], but default/new-vm-2[Pod] is not allowed by any Egress rule
				- NetworkPolicy 'default/policy13' selects default/new-vm-1[Pod], but default/new-vm-2[Pod] is not allowed by any Egress rule
				- NetworkPolicy 'default/policy2' selects default/new-vm-1[Pod], and Egress rule #1 selects default/new-vm-2[Pod], but the protocols and ports do not match
				- NetworkPolicy 'default/policy5' selects default/new-vm-1[Pod], but default/new-vm-2[Pod] is not allowed by any Egress rule

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy 'default/default-deny' selects default/new-vm-2[Pod], but default/new-vm-1[Pod] is not allowed by any Ingress rule (no rules defined)
				- NetworkPolicy 'default/policy14' selects default/new-vm-2[Pod], but default/new-vm-1[Pod] is not allowed by any Ingress rule
				- NetworkPolicy 'default/policy16' selects default/new-vm-2[Pod], but default/new-vm-1[Pod] is not allowed by any Ingress rule
				- NetworkPolicy 'default/policy18' selects default/new-vm-2[Pod], but default/new-vm-1[Pod] is not allowed by any Ingress rule
				- NetworkPolicy 'default/policy3' selects default/new-vm-2[Pod], and Ingress rule #1 selects default/new-vm-1[Pod], but the protocols and ports do not match
				- NetworkPolicy 'default/policy6' selects default/new-vm-2[Pod], but default/new-vm-1[Pod] is not allowed by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/new-vm-1[Pod] => default/new-vm-3[Pod]:

Allowed connections:
	Allowed TCP:[1-79,81-65535], UDP, SCTP due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy 'default/policy0' allows connections by Egress rule #1
		Ingress (Allowed)
			NetworkPolicy 'default/policy1' allows connections by Ingress rule #1

	Allowed TCP:[80] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy list:
				- NetworkPolicy 'default/policy0' allows connections by Egress rule #1
				- NetworkPolicy 'default/policy2' allows connections by Egress rule #1

		Ingress (Allowed)
			NetworkPolicy list:
				- NetworkPolicy 'default/policy1' allows connections by Ingress rule #1
				- NetworkPolicy 'default/policy3' allows connections by Ingress rule #1


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/new-vm-2[Pod] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy 'default/default-deny' selects default/new-vm-2[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Egress rule (no rules defined)
				- NetworkPolicy 'default/policy11' selects default/new-vm-2[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Egress rule
				- NetworkPolicy 'default/policy13' selects default/new-vm-2[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Egress rule
				- NetworkPolicy 'default/policy2' selects default/new-vm-2[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Egress rule
				- NetworkPolicy 'default/policy5' selects default/new-vm-2[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Egress rule
				- NetworkPolicy 'default/policy9' selects default/new-vm-2[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Egress rule

		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/new-vm-2[Pod] => default/new-vm-1[Pod]:

Allowed connections:
	Allowed TCP:[80] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy 'default/policy2' allows connections by Egress rule #1
		Ingress (Allowed)
			NetworkPolicy 'default/policy3' allows connections by Ingress rule #1

Denied connections:
	Denied TCP:[1-79,81-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy 'default/default-deny' selects default/new-vm-2[Pod], but default/new-vm-1[Pod] is not allowed by any Egress rule (no rules defined)
				- NetworkPolicy 'default/policy11' selects default/new-vm-2[Pod], but default/new-vm-1[Pod] is not allowed by any Egress rule
				- NetworkPolicy 'default/policy13' selects default/new-vm-2[Pod], but default/new-vm-1[Pod] is not allowed by any Egress rule
				- NetworkPolicy 'default/policy2' selects default/new-vm-2[Pod], and Egress rule #1 selects default/new-vm-1[Pod], but the protocols and ports do not match
				- NetworkPolicy 'default/policy5' selects default/new-vm-2[Pod], but default/new-vm-1[Pod] is not allowed by any Egress rule
				- NetworkPolicy 'default/policy9' selects default/new-vm-2[Pod], but default/new-vm-1[Pod] is not allowed by any Egress rule

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy 'default/default-deny' selects default/new-vm-1[Pod], but default/new-vm-2[Pod] is not allowed by any Ingress rule (no rules defined)
				- NetworkPolicy 'default/policy1' selects default/new-vm-1[Pod], but default/new-vm-2[Pod] is not allowed by any Ingress rule
				- NetworkPolicy 'default/policy14' selects default/new-vm-1[Pod], but default/new-vm-2[Pod] is not allowed by any Ingress rule
				- NetworkPolicy 'default/policy18' selects default/new-vm-1[Pod], but default/new-vm-2[Pod] is not allowed by any Ingress rule
				- NetworkPolicy 'default/policy3' selects default/new-vm-1[Pod], and Ingress rule #1 selects default/new-vm-2[Pod], but the protocols and ports do not match
				- NetworkPolicy 'default/policy6' selects default/new-vm-1[Pod], but default/new-vm-2[Pod] is not allowed by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/new-vm-2[Pod] => default/new-vm-3[Pod]:

Allowed connections:
	Allowed TCP:[80] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy 'default/policy2' allows connections by Egress rule #1
		Ingress (Allowed)
			NetworkPolicy 'default/policy3' allows connections by Ingress rule #1

Denied connections:
	Denied TCP:[1-79,81-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy 'default/default-deny' selects default/new-vm-2[Pod], but default/new-vm-3[Pod] is not allowed by any Egress rule (no rules defined)
				- NetworkPolicy 'default/policy11' selects default/new-vm-2[Pod], but default/new-vm-3[Pod] is not allowed by any Egress rule
				- NetworkPolicy 'default/policy13' selects default/new-vm-2[Pod], but default/new-vm-3[Pod] is not allowed by any Egress rule
				- NetworkPolicy 'default/policy2' selects default/new-vm-2[Pod], and Egress rule #1 selects default/new-vm-3[Pod], but the protocols and ports do not match
				- NetworkPolicy 'default/policy5' selects default/new-vm-2[Pod], but default/new-vm-3[Pod] is not allowed by any Egress rule
				- NetworkPolicy 'default/policy9' selects default/new-vm-2[Pod], but default/new-vm-3[Pod] is not allowed by any Egress rule

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy 'default/default-deny' selects default/new-vm-3[Pod], but default/new-vm-2[Pod] is not allowed by any Ingress rule (no rules defined)
				- NetworkPolicy 'default/policy1' selects default/new-vm-3[Pod], but default/new-vm-2[Pod] is not allowed by any Ingress rule
				- NetworkPolicy 'default/policy14' selects default/new-vm-3[Pod], but default/new-vm-2[Pod] is not allowed by any Ingress rule
				- NetworkPolicy 'default/policy18' selects default/new-vm-3[Pod], but default/new-vm-2[Pod] is not allowed by any Ingress rule
				- NetworkPolicy 'default/policy3' selects default/new-vm-3[Pod], and Ingress rule #1 selects default/new-vm-2[Pod], but the protocols and ports do not match
				- NetworkPolicy 'default/policy6' selects default/new-vm-3[Pod], but default/new-vm-2[Pod] is not allowed by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/new-vm-3[Pod] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy 'default/default-deny' selects default/new-vm-3[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Egress rule (no rules defined)
				- NetworkPolicy 'default/policy0' selects default/new-vm-3[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Egress rule
				- NetworkPolicy 'default/policy11' selects default/new-vm-3[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Egress rule
				- NetworkPolicy 'default/policy13' selects default/new-vm-3[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Egress rule
				- NetworkPolicy 'default/policy2' selects default/new-vm-3[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Egress rule
				- NetworkPolicy 'default/policy5' selects default/new-vm-3[Pod], but 0.0.0.0-255.255.255.255 is not allowed by any Egress rule

		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/new-vm-3[Pod] => default/new-vm-1[Pod]:

Allowed connections:
	Allowed TCP:[1-79,81-65535], UDP, SCTP due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy 'default/policy0' allows connections by Egress rule #1
		Ingress (Allowed)
			NetworkPolicy 'default/policy1' allows connections by Ingress rule #1

	Allowed TCP:[80] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy list:
				- NetworkPolicy 'default/policy0' allows connections by Egress rule #1
				- NetworkPolicy 'default/policy2' allows connections by Egress rule #1

		Ingress (Allowed)
			NetworkPolicy list:
				- NetworkPolicy 'default/policy1' allows connections by Ingress rule #1
				- NetworkPolicy 'default/policy3' allows connections by Ingress rule #1


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/new-vm-3[Pod] => default/new-vm-2[Pod]:

Allowed connections:
	Allowed TCP:[80] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy 'default/policy2' allows connections by Egress rule #1
		Ingress (Allowed)
			NetworkPolicy 'default/policy3' allows connections by Ingress rule #1

Denied connections:
	Denied TCP:[1-79,81-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy list:
				- NetworkPolicy 'default/default-deny' selects default/new-vm-3[Pod], but default/new-vm-2[Pod] is not allowed by any Egress rule (no rules defined)
				- NetworkPolicy 'default/policy0' selects default/new-vm-3[Pod], but default/new-vm-2[Pod] is not allowed by any Egress rule
				- NetworkPolicy 'default/policy11' selects default/new-vm-3[Pod], but default/new-vm-2[Pod] is not allowed by any Egress rule
				- NetworkPolicy 'default/policy13' selects default/new-vm-3[Pod], but default/new-vm-2[Pod] is not allowed by any Egress rule
				- NetworkPolicy 'default/policy2' selects default/new-vm-3[Pod], and Egress rule #1 selects default/new-vm-2[Pod], but the protocols and ports do not match
				- NetworkPolicy 'default/policy5' selects default/new-vm-3[Pod], but default/new-vm-2[Pod] is not allowed by any Egress rule

		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy 'default/default-deny' selects default/new-vm-2[Pod], but default/new-vm-3[Pod] is not allowed by any Ingress rule (no rules defined)
				- NetworkPolicy 'default/policy14' selects default/new-vm-2[Pod], but default/new-vm-3[Pod] is not allowed by any Ingress rule
				- NetworkPolicy 'default/policy16' selects default/new-vm-2[Pod], but default/new-vm-3[Pod] is not allowed by any Ingress rule
				- NetworkPolicy 'default/policy18' selects default/new-vm-2[Pod], but default/new-vm-3[Pod] is not allowed by any Ingress rule
				- NetworkPolicy 'default/policy3' selects default/new-vm-2[Pod], and Ingress rule #1 selects default/new-vm-3[Pod], but the protocols and ports do not match
				- NetworkPolicy 'default/policy6' selects default/new-vm-2[Pod], but default/new-vm-3[Pod] is not allowed by any Ingress rule
